# Kloudan

./: .gitignore  Cargo.toml  README.md
src/: config.rs  lib.rs  main.rs
src/database/: init_db_pool.rs  models.rs  schema.rs
src/database/migrations/2023-03-31-020515_create_users_table/: up.sql
src/handlers/: auth_handler.rs  dir_handlers.rs  errors.rs  index_handlers.rs
src/middlewares/: handle_errors.rs  sessions.rs
src/routes/: auth_routes.rs  dir_routes.rs  index_routes.rs  main.rs  user_routes.rs
src/services/auth_services/: login_user.rs  register_user.rs
src/services/dir_services/: create_dirs.rs
src/services/user_services/: show_user.rs
src/tools/: encrypt.rs
static/css/: 404.css  theming.css
static/js/: listeners.js
templates/components/: lateral_menu.tera  logged_in_layout.tera
templates/errors/: error.tera
templates/heads/: main.tera
templates/pages/: explorer.tera  index.tera  login.tera  signup.tera
