[package]
name = "dfsmart"
version = "0.1.0"
edition = "2021"

[lib]
name = "module"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-files = "0.6.2"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
tera = "1.18.1"
diesel = { version = "2.0.3", features = ["mysql","r2d2"] }
dotenv = "0.15.0"
serde = {version="1.0.159",features = ["derive"]}
chrono = "0.4.24"
rand = "0.8.5"
sha2 = "0.10.6"


